feat: add delete feature from favorites on the page

--- a/src/modules/product/product.tpl.html
+++ b/src/modules/product/product.tpl.html
@@ -2,6 +2,7 @@
   <div class="product__img">
     <img data-tag="img">
   </div>
+  <span class="product__close-icon" data-tag="iconFav"></span>
 
   <span class="product__info">
     <h3 class="product__title" data-tag="title"></h3>
