fix: small style fixes

--- a/src/modules/searchPage/searchpage.tpl.html
+++ b/src/modules/searchPage/searchpage.tpl.html
@@ -1,6 +1,4 @@
-<div class="searchpage">
-
-  <div class="wrap">
+<div class="searchpage wrap">
     <div class="searchpage__input-wrap">
       <svg class="svg-icon inputIcon">
           <use xlink:href="#searchIcon"></use>
