--- a/src/modules/searchHint/searchHint.tpl.html
+++ b/src/modules/searchHint/searchHint.tpl.html
@@ -1,3 +1,3 @@
-<div class="searchHint">
-  <p class="searchHint__title" data-tag="searchHintTitle"></p>
-</div>
+  <a class="searchHint">
+    <span class="searchHint__title" data-tag="searchHintTitle"></span>
+  </a>
